--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 ffmpeg-python==0.2.0
-Flask==2.0.3
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.5.1
-gunicorn==20.1.0
-Jinja2==3.0.3
-moviepy==1.0.3
-mutagen==1.45.1
-pytube==15.0.0
-SQLAlchemy==1.4.31
-Werkzeug==2.0.3
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Jinja2==3.1.5
+moviepy==2.1.2
+mutagen==1.47.0
+pytubefix==8.12.1
+SQLAlchemy==2.0.38
+Werkzeug==3.1.3
 youtube-search-python==1.6.6
-yt-dlp==2022.2.4
+yt-dlp==2025.1.26
